fix(component): center navbar icons on mobile (#33)

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -25,7 +25,7 @@
 
 .nav__list {
   display: flex;
-  gap: clamp(var(--space-md), 0.143rem + 2.679vw, var(--space-xxl));
+  gap: clamp(var(--space-xs), -0.857rem + 3.929vw, var(--space-xxl));
   justify-content: center;
 }
 
@@ -70,6 +70,10 @@
 }
 
 @media (max-width: 768px) {
+  .nav__item {
+    flex: 1;
+  }
+
   .nav__item--mobile {
     display: block;
   }
@@ -81,8 +85,8 @@
     z-index: 100;
     justify-content: space-evenly;
     width: 100%;
-    padding: var(--space-sm) 0
-      calc(var(--space-sm) + env(safe-area-inset-bottom)) 0;
+    padding: var(--space-sm) var(--space-sm)
+      calc(var(--space-sm) + env(safe-area-inset-bottom)) var(--space-sm);
     background-color: var(--bg-primary);
     border-top: 1px solid var(--border-subtle);
     box-shadow: 0px -4px 10px -5px rgba(0, 0, 0, 0.1);
@@ -90,6 +94,7 @@
 
   .nav__link {
     --link-color: var(--text-body);
+    --link-weight: 400;
 
     flex-direction: column;
     font-size: var(--text-sm);
